force-app/main/default/objects/Sample__x/Sample__x.object-meta.xml
<CustomObject>
    <description>Sample</description>
    <externalDataSource>RusInt</externalDataSource>
    <externalName>Sample</externalName>
    <label>Sample</label>
    <pluralLabel>Samples</pluralLabel>
</CustomObject>