force-app/main/default/objects/Sample__x/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <externalDeveloperName>customer_navision_id</externalDeveloperName>
    <label>Account</label>
    <length>255</length>
    <referenceTargetField>Account.Customer_ID__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Samples</relationshipLabel>
    <relationshipName>Samples</relationshipName>
    <type>IndirectLookup</type>
</CustomField>