force-app/main/default/objects/Sample__x/fields/customer_navision_id__c.field-meta.xml
<CustomField>
    <fullName>customer_navision_id__c</fullName>
    <description>customer_navision_id</description>
    <externalDeveloperName>customer_navision_id</externalDeveloperName>
    <label>customer_navision_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>