force-app/main/default/objects/Sample__x/fields/descriptive__c.field-meta.xml
<CustomField>
    <fullName>descriptive__c</fullName>
    <description>descriptive</description>
    <externalDeveloperName>descriptive</externalDeveloperName>
    <label>descriptive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>