force-app/main/default/objects/Sample__x/fields/due_date__c.field-meta.xml
<CustomField>
    <fullName>due_date__c</fullName>
    <description>due_date</description>
    <externalDeveloperName>due_date</externalDeveloperName>
    <label>due_date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>