force-app/main/default/objects/Sample__x/fields/iban__c.field-meta.xml
<CustomField>
    <fullName>iban__c</fullName>
    <description>iban</description>
    <externalDeveloperName>iban</externalDeveloperName>
    <label>iban</label>
    <length>255</length>
    <type>Text</type>
</CustomField>