force-app/main/default/objects/Sample__x/fields/invoice_date__c.field-meta.xml
<CustomField>
    <fullName>invoice_date__c</fullName>
    <description>invoice_date</description>
    <externalDeveloperName>invoice_date</externalDeveloperName>
    <label>invoice_date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>