force-app/main/default/objects/Sample__x/fields/invoice_navision_id__c.field-meta.xml
<CustomField>
    <fullName>invoice_navision_id__c</fullName>
    <description>invoice_navision_id</description>
    <externalDeveloperName>invoice_navision_id</externalDeveloperName>
    <label>invoice_navision_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>