force-app/main/default/objects/Sample__x/fields/number__c.field-meta.xml
<CustomField>
    <fullName>number__c</fullName>
    <description>number</description>
    <externalDeveloperName>number</externalDeveloperName>
    <label>number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>