force-app/main/default/objects/Sample__x/fields/state__c.field-meta.xml
<CustomField>
    <fullName>state__c</fullName>
    <description>state</description>
    <externalDeveloperName>state</externalDeveloperName>
    <label>state</label>
    <length>255</length>
    <type>Text</type>
</CustomField>