force-app/main/default/objects/Sample__x/fields/total_price__c.field-meta.xml
<CustomField>
    <fullName>total_price__c</fullName>
    <description>total_price</description>
    <externalDeveloperName>total_price</externalDeveloperName>
    <label>total_price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>